# probable-giggle

./: Makefile.am  Makefile.in  README.md  Rectangle-cscs-state-mesh.pvsm  Rectangle-cscs-state.pvsm  Rectangle-rfrf-state-mesh.pvsm  Rectangle-rfrf-state.pvsm  Rectangle-rsrs-state.pvsm  circular_disc_uniform_pressure.cc  circular_disc_uniform_pressure_clamped.cc  circular_disc_uniform_pressure_three_pins.cc  kirchhoff_plate_bending_analytic_solutions.h  plot_graphs.m  rectangular_sheet_kirchhoff_plate_bending.cc  rectangular_sheet_kirchhoff_plate_bending_demo.cc  rectangular_sheet_kirchhoff_plate_bending_rotation_demo.cc  run_code.sh  semi_annular_plate_pinned.cc  unit_square.1.ele  unit_square.1.node  unit_square.1.poly  validate.sh
